flapivor/tests/m3/hopix/typechecker/good/16-polymorphic-function.hopix
def id : forall a. a -> a (x) = x

val main : Int = id<Int> (37)