flapivor/tests/m3/hopix/typechecker/bad/23-invalid-function-call-09.hopix
def f : forall a. Int -> a (x) = f<Int> (x)